--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -12,7 +12,7 @@
     {% for t in talks reversed %}
     <div class="row">
       <div class="col-md-2 col-md-offset-1 col-sm-2 text-right">
-        <h4>{{ t.date | date : "%x" }}</h4>
+        <h4>{{ t.date | date : "%B %Y" }}</h4>
       </div>
       <div class="col-md-8 col-sm-10">
         <h4>{{ t.title}}</h4>
