--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -5,11 +5,12 @@
   
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="page-header">Publications</h2>
+        <h2 class="page-header">Selected Publications</h2>
       </div>
     </div>
     {% assign publications = site.data.publications | sort:"date" %}
     {% for p in publications reversed %}
+	{% if p.featured == "true" %}
     <div class="row{% if p != publications.first %} not-last{% endif %}">
       <div class="col-sm-3">
         {% include thumbnail.html %}
@@ -44,6 +45,7 @@
         {% endif %}
       </div>
     </div>
+	{% endif %}
     {% endfor %}
   </div>
 </section>
