--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
 
 {% include header.html %}
 
-{% include publications.html %}
+{% include publications_featured.html %}
+
+{% include publications_additional.html %}
 
 {% include talks.html %}
 
