--- a/_includes/publications_featured.html
+++ b/_includes/publications_featured.html
@@ -5,12 +5,12 @@
   
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="page-header">Selected Publications</h2>
+        <h2 class="page-header">Featured Publications</h2>
       </div>
     </div>
     {% assign publications = site.data.publications | sort:"date" %}
     {% for p in publications reversed %}
-	{% if p.featured == "true" %}
+	{% if p.featured and p.featured == "true" %}
     <div class="row{% if p != publications.first %} not-last{% endif %}">
       <div class="col-sm-3">
         {% include thumbnail.html %}
