--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -15,7 +15,7 @@
         <h4>{{ t.title}}</h4>
       </div>
       <div class="col-md-8 col-sm-10">
-        <h4>{{ t.content}}</h4>
+        { t.content}}
       </div>
     </div>
     {% endfor %}
