--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -10,7 +10,7 @@
     </div>
     {% assign activities = site.data.activities %}
     {% for t in activities %}
-    <div class="row">
+    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
       <legend>{{ t.title}}</legend>
       <div class="col-sm-10">
         {{ t.content}}
