--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
   <div class="container">
 
     <div class="row portrait">
-      <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
-        <img class="img-responsive img-thumbnail center-block" src="{{ site.portrait }}" alt="portrait">
+      <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+        <img class="img-responsive img-thumbnail center-block" src="{{ site.portrait }}" style="max-width: 100%;" alt="portrait">
       </div>
     </div>
 
