--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,6 +20,7 @@
         <li><a class="page-scroll" href="#publications">Publications</a></li>
         <li><a class="page-scroll" href="#talks">Talks</a></li>
         <li><a class="page-scroll" href="#teaching">Teaching</a></li>
+		<li><a class="page-scroll" href="#activities">Professional Activities</a></li>
         <li><a class="page-scroll" href="#contact">Contact</a></li>
       </ul>
     </div>
