--- a/_includes/videos.html
+++ b/_includes/videos.html
@@ -11,7 +11,7 @@
     {% assign videos = site.data.videos %}
     {% for v in videos %}
     <div class="row">
-      <div class="col-md-8 col-sm-10" align="center">
+      <div class="col-sm-10">
         <iframe width="560" height="315" src="{{ v.link }}" frameborder="0"> </iframe>
       </div>
     </div>
