--- a/_includes/videos.html
+++ b/_includes/videos.html
@@ -12,7 +12,7 @@
     {% for v in videos %}
     <div class="row">
       <div class="col-sm-10">
-        <iframe width="560" height="315" src="{{ v.link }}" frameborder="0"> </iframe>
+        <iframe width="560" height="315" src="{{ v.link }}" frameborder="0" align="center"> </iframe>
       </div>
     </div>
     {% endfor %}
