--- a/_includes/videos.html
+++ b/_includes/videos.html
@@ -11,8 +11,12 @@
     {% assign videos = site.data.videos %}
     {% for v in videos %}
     <div class="row">
-      <div class="col-sm-10">
-        <iframe width="560" height="315" src="{{ v.link }}" frameborder="0" align="center"> </iframe>
+	  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+	    <fieldset>
+        <div class="col-sm-10">
+          <iframe width="560" height="315" src="{{ v.link }}" frameborder="0" align="center"> </iframe>
+		</div>
+		</fieldset>
       </div>
     </div>
     {% endfor %}
