--- a/_includes/videos.html
+++ b/_includes/videos.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="page-header">Talks</h2>
+        <h2 class="page-header">Videos</h2>
       </div>
     </div>
     {% assign videos = site.data.videos %}
@@ -14,7 +14,7 @@
 	  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 	    <fieldset>
         <div class="col-sm-10">
-          <p><iframe width="100%" src="{{ v.link }}" frameborder="0" align="center"> </iframe></p>
+          <p><iframe width="100%" src="{{ v.link }}" frameborder="0" align="center"> </iframe></p><br>
 		</div>
 		</fieldset>
       </div>
