--- a/_includes/videos.html
+++ b/_includes/videos.html
@@ -14,7 +14,7 @@
 	  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 	    <fieldset>
         <div class="col-sm-10">
-          <iframe width="100%" src="{{ v.link }}" frameborder="0" align="center"> </iframe><br>
+          <p><iframe width="100%" height="0" src="{{ v.link }}" frameborder="0" align="center"> </iframe></p><br>
 		</div>
 		</fieldset>
       </div>
