--- a/_includes/videos.html
+++ b/_includes/videos.html
@@ -11,7 +11,7 @@
     {% assign videos = site.data.videos %}
     {% for v in videos %}
     <div class="row">
-	  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+	  <div class="col-sm-8 col-sm-offset-2">
 	    <fieldset>
         <div class="col-sm-12">
           <p style="position: relative; width: 100%; height: 0; padding-bottom: 56.25%"><iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="{{ v.link }}" frameborder="0"> </iframe></p>
