--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="page-header">Professional Activities</h2>
+        <h2 class="page-header">Professional Activities, Awards, and Honors</h2>
       </div>
     </div>
     {% assign activities = site.data.activities %}
