--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -11,7 +11,7 @@
     {% assign activities = site.data.activities %}
     {% for t in activities %}
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+		<div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
 		  <fieldset>
 		  <legend>{{ t.title}}</legend>
 		  <div class="col-sm-12">
