--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -30,6 +30,20 @@
                 <p class="form-control-static text-danger">{{ contact.phone }}</p>
               </div>
             </div>
+			
+			<div class="form-group">
+              <label class="col-sm-2 control-label">Fax</label>
+              <div class="col-sm-10">
+                <p class="form-control-static text-danger">{{ contact.fax }}</p>
+              </div>
+            </div>
+			
+			<div class="form-group">
+              <label class="col-sm-2 control-label">Address</label>
+              <div class="col-sm-10">
+                <p class="form-control-static text-danger">{{ contact.address }}</p>
+              </div>
+            </div>
 
             <div class="form-group">
               <label class="col-sm-2 control-label">Handle</label>
