--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.author }}{% endif %}</title>
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.author }}{% endif %} - Portfolio</title>
   <meta name="description" content="{{ site.description }}">
 
   <!-- Bootstrap Core CSS -->
