--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -8,15 +8,17 @@
         <h2 class="page-header">Talks</h2>
       </div>
     </div>
+	{% assign curDate = site.time | date: '%s' %}
     {% assign talks = site.data.talks | sort:"date" %}
     {% for t in talks reversed %}
     <div class="row">
       <div class="col-md-2 col-md-offset-1 col-sm-2 text-right">
         <h4>{{ t.date | date : "%B %Y" }}</h4>
       </div>
+	  {% assign talkDate = t.date | date: '%s' %}
       <div class="col-md-8 col-sm-10">
         <h4>{{ t.title}}</h4>
-        <p class="text-danger">{{ t.location }}</p>
+        <p class="text-danger">{% if talkDate > curDate %}to be held at {% endif %}{{ t.location }}</p>
         {% if t.downloads %}
         <p>{% for download in t.downloads %}
           <a href="{{ download.href }}" target="_blank">{{ download.desc }}</a>{% if download != t.downloads.last %}, {% endif %}{% endfor %}
