--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -18,7 +18,7 @@
 	  {% assign talkDate = t.date | date: '%s' %}
       <div class="col-md-8 col-sm-10">
         <h4>{{ t.title}}</h4>
-        <p class="text-danger">{% if talkDate > curDate %}to be held at {% endif %}{{ t.location }}</p>
+        <p class="text-danger">{% if talkDate > curDate %}<b>to be held at {% endif %}{{ t.location }}{% if talkDate > curDate %}</b>{% endif %}</p>
         {% if t.downloads %}
         <p>{% for download in t.downloads %}
           <a href="{{ download.href }}" target="_blank">{{ download.desc }}</a>{% if download != t.downloads.last %}, {% endif %}{% endfor %}
