--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
   <link rel="stylesheet" href="{{ "/css/scrolling-nav.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/portfolio.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/hoverex-all.css" | prepend: site.baseurl }}">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
