--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -8,7 +8,7 @@
 				{% for c in carousel %}
 					<div class="portfolio-item graphic-design">
 						<div class="he-wrap tpl6">
-						<img src="{{ "/img/carousel/" | prepend: site.baseurl }}{{ c.img }}" alt="">
+						<img src="{{ "/img/carousel/" | prepend: site.baseurl }}{{ c.img }}" alt="" style="width:100%; height:100%">
 							<div class="he-view">
 								<div class="bg a0" data-animate="fadeIn">
 									<h3 class="a1" data-animate="fadeInDown">Moep</h3>
