--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -4,6 +4,9 @@
 		<div class="portfolio-centered">
 			{% if include.title %}<h3>{{ include.title }}</h3>{% endif %}
 			<div class="recentitems portfolio">
+			<div class="my-slider">
+			<ul>
+			<li>
 				{% assign carousel = site.data.carousel %}
 				{% for c in carousel %}
 					<div class="portfolio-item graphic-design">
@@ -19,6 +22,9 @@
 						</div><!-- he wrap -->
 					</div><!-- end col-12 -->
 				{% endfor %}
+			</li>
+			</ul>
+			</div>
 			</div><!-- portfolio -->
 		</div><!-- portfolio container -->
 	  </div><!--/Portfoliowrap -->
