--- a/_includes/js.html
+++ b/_includes/js.html
@@ -6,6 +6,7 @@
 <script src="{{ "/js/jquery.prettyPhoto.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/jquery.isotope.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/custom.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/unslider-min.js" | prepend: site.baseurl }}"></script>
 {% if site.analytics %}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -100,3 +101,9 @@
 	});
 })(jQuery);
 </script>
+<script>
+	jQuery(document).ready(function($) {
+		$('.my-slider').unslider();
+	});
+</script>
+	
