--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -9,8 +9,8 @@
 			<li class="sub" style="width:100%">
 				{% assign carousel = site.data.carousel %}
 				{% for c in carousel %}
-					<div class="portfolio-item graphic-design">
-						<div class="he-wrap tpl6">
+					<div class="portfolio-item graphic-design" style="display: inline;">
+						<div class="he-wrap tpl6" style="display: inline;">
 						<img src="{{ "/img/carousel/" | prepend: site.baseurl }}{{ c.img }}" alt="" style="width:100%; height:100%">
 							<div class="he-view">
 								<div class="bg a0" data-animate="fadeIn">
