--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -23,6 +23,23 @@
 					</div><!-- end col-12 -->
 				{% endfor %}
 			</li>
+			<li class="sub" style="width:100%">
+				{% assign carousel = site.data.carousel %}
+				{% for c in carousel %}
+					<div class="portfolio-item graphic-design carouselelement" style="display: inline;">
+						<div class="he-wrap tpl6 carouselelement" style="display: inline;">
+						<img src="{{ "/img/carousel/" | prepend: site.baseurl }}{{ c.img }}" alt="" style="width:100%; height:100%">
+							<div class="he-view">
+								<div class="bg a0" data-animate="fadeIn">
+									<h3 class="a1" data-animate="fadeInDown">Moep</h3>
+									<a data-rel="prettyPhoto" href="{{ "/img/carousel/" | prepend: site.baseurl }}{{ c.img }}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-search"></i></a>
+									<a href="{{  project.url | prepend: site.baseurl }}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-link"></i></a>
+								</div>
+							</div>				
+						</div><!-- he wrap -->
+					</div><!-- end col-12 -->
+				{% endfor %}
+			</li>
 			</ul>
 			</div>
 			</div><!-- portfolio -->
