--- a/_includes/js.html
+++ b/_includes/js.html
@@ -104,11 +104,7 @@
 <script>
 	jQuery(document).ready(function($) {
 		$('.my-slider').unslider({
-			animation: 'fade', autoplay: true, arrows: false,
-			selectors: {
-				container: 'ul:first',
-				slides: 'li'
-			} 
+			animation: 'fade', autoplay: true, arrows: false
 		});
 	});
 </script>
