--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -29,7 +29,7 @@
 				{% assign carousel = site.data.carousel %}
 				{% for c in carousel %}
 				<li>
-					<img src="{{ "/img/carousel/" | prepend: site.baseurl }}{{ c.img }}">			
+					Moep	
 				</li>
 				{% endfor %}
 			</ul>
