--- a/_includes/js.html
+++ b/_includes/js.html
@@ -103,8 +103,6 @@
 </script>
 <script>
 	jQuery(document).ready(function($) {
-		$('.my-slider').unslider({
-			animation: 'fade', autoplay: true, arrows: false
-		});
+		$('.my-slider').unslider();
 	});
 </script>
