--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,9 +1,9 @@
 
 <!-- Carousel -->
-	  <div id="portfoliowrap">
-		<div class="portfolio-centered">
+	  <div>
+		<div>
 			{% if include.title %}<h3>{{ include.title }}</h3>{% endif %}
-			<div class="recentitems portfolio">
+			<div>
 			<div class="my-slider">
 			<ul>
 				{% assign carousel = site.data.carousel %}
