--- a/_includes/js.html
+++ b/_includes/js.html
@@ -1,4 +1,4 @@
-<!--<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/retina-1.1.0.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/jquery.hoverdir.js" | prepend: site.baseurl }}"></script>
