--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -26,7 +26,7 @@
 			</div>
 			</div><!--/Portfoliowrap -->
 			</li>
-			<li class="sub" style="position: absolute; width:100%">
+			<li class="sub" style="width:100%">
 			<div id="portfoliowrap">
 			<div class="portfolio-centered">
 				<div class="recentitems portfolio">
