--- a/_includes/scripts2.html
+++ b/_includes/scripts2.html
@@ -124,9 +124,7 @@
 </script>
 <script>
 	jQuery(document).ready(function($) {
-		$('.my-slider').unslider({
-			animation: 'fade', autoplay: true, arrows: false 
-		});	
+		$('.my-slider').unslider();	
 	});
 </script>
 
