--- a/_includes/scripts2.html
+++ b/_includes/scripts2.html
@@ -124,7 +124,9 @@
 </script>
 <script>
 	jQuery(document).ready(function($) {
-		$('.my-slider').unslider();	
+		$('.my-slider').unslider({
+			animation: 'fade', autoplay: true, arrows: true 
+		});	
 	});
 </script>
 
