--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -29,7 +29,7 @@
 			<li class="sub" style="width:100%">
 			<div id="portfoliowrap">
 			<div class="portfolio-centered">
-				<div class="recentitems portfolio" style="position: absolute">
+				<div class="recentitems portfolio">
 				{% assign carousel = site.data.carousel %}
 				{% for c in carousel %}
 					<div class="portfolio-item graphic-design carouselelement" style="display: inline;">
