--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="{{ "/css/scrolling-nav.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/portfolio.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/hoverex-all.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/css/unslider.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/unslider-dots.css" | prepend: site.baseurl }}">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
