--- a/_includes/scripts2.html
+++ b/_includes/scripts2.html
@@ -125,7 +125,7 @@
 <script>
 	jQuery(document).ready(function($) {
 		$('.my-slider').unslider({
-			animation: 'fade', autoplay: true, arrows: true 
+			animation: 'fade', autoplay: true, arrows: false 
 		});	
 	});
 </script>
