--- a/css/unslider.css
+++ b/css/unslider.css
@@ -1,1 +1,1 @@
-.unslider-wrap li{position:absolute;left:0;top:0;right:0;z-index:8}.unslider-wrap li.unslider-active{z-index:10}
+.unslider-active{z-index:10}
