--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -13,7 +13,7 @@
 				{% for s in slidedeck %}
 					<div class="portfolio-item graphic-design carouselelement" style="display: inline;">
 						<div class="he-wrap tpl6 carouselelement" style="display: inline;">
-						<img src="{{ "/img/carousel/" | prepend: site.baseurl }}{{ s.img }}" alt="" style="width:100%; height:100%">
+						<img src="{{ "/img/carousel/" | prepend: site.baseurl }}{{ s.thumbnail }}" alt="" style="width:100%; height:100%">
 							<div class="he-view">
 								<div class="bg a0" data-animate="fadeIn">
 									<h3 class="a1" data-animate="fadeInDown">Moep</h3>
