--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -84,8 +84,8 @@ a.thumbnail {
 {
 	height:100%;
 	width:100%;
-	background-color:#ffffff;
-	background-color:rgba(#ffffff,.9);
+	background-color: #00b3fe;
+	background-color:rgba(0,179,254,0.9);
 	text-align:center;
 }
 
