--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="{{ "/css/hoverex-all.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/unslider.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/unslider-dots.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
