--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -14,7 +14,7 @@
 					<div class="portfolio-item graphic-design carouselelement" style="display: inline;">
 						<div class="he-wrap tpl6 carouselelement" style="display: inline;">
 						<img src="{{ "/img/carousel/" | prepend: site.baseurl }}{{ s.thumbnail }}" alt="" style="width:100%; height:100%">
-							<div class="he-view container">
+							<div class="he-view carouselcontainer">
 								<div class="bg a0" data-animate="fadeIn">
 									<h4 data-animate="fadeInDown">Moep</h4>
 									<a data-rel="prettyPhoto" href="{{ "/img/carousel/" | prepend: site.baseurl }}{{ s.img }}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-search"></i></a>
