--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -2,10 +2,10 @@
 <!-- Carousel -->
 			{% if include.title %}<h3>{{ include.title }}</h3>{% endif %}
 			<div class="my-slider">
-			<ul id="carousellist" style="width:100%">
+			<ul id="carousellist" style="width:60%">
 			{% assign carousel = site.data.carousel %}
 			{% for c in carousel %}
-			<li class="sub" style="width:100%;{% if c == carousel.first %} position: absolute{% endif %}">
+			<li class="sub" style="width:100%;{% if c == carousel.first %} position: relative{% endif %}">
 			<div id="portfoliowrap">
 			<div class="portfolio-centered">
 				<div class="recentitems portfolio">
