--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -8,7 +8,7 @@
 			{% for c in carousel %}
 			<li class="sub" style="width:100%;{% if c != carousel.last %} position: absolute{% endif %}">
 			<div id="portfoliowrap">
-			<div class="portfolio">
+			<div class="portfolio-centered">
 				<div class="recentitems portfolio">
 				{% assign slidedeck = c.slidedeck %}
 				{% for s in slidedeck %}
