--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -68,9 +68,9 @@ a.thumbnail {
 .tpl6 h3
 {
 	color:#fff;
-	margin:0;
-	padding:40px 5px 0;
-	font-size:16px;
+	margin:0px 30px 15px 30px;
+	padding: 0;
+	font-size:15px;
 	text-transform:uppercase;
 }
 .tpl6 .dmbutton
@@ -84,9 +84,9 @@ a.thumbnail {
 {
 	height:100%;
 	width:100%;
-	background-color: #00b3fe;
 	background-color:rgba(0,179,254,0.9);
 	text-align:center;
+	display: table;
 }
 
 .dmbutton:hover,
@@ -148,9 +148,16 @@ a.thumbnail {
     display:inline-block;
     }
 	
-	.carouselelement {
+.carouselelement {
     display: block;
     float: left;
     padding: 0px;
     margin: 0px;
+}
+
+.carouselitem
+{
+	padding: 0px;
+	display: table-cell;
+	vertical-align: middle;
 }
