--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -51,7 +51,7 @@ a.thumbnail {
 }
 
 #portfoliowrap h3 {
-	margin-bottom: 25px;
+	margin-bottom: 1em;
 }
 
 .portfolio {
@@ -63,7 +63,7 @@ a.thumbnail {
 
 .portfolio-item .title:before {border-radius:0; display:none}
 .portfolio-item p {margin:0px 0 30px;}
-.portfolio-item h3 {margin:-10px 0 10px; font-size:16px; text-transform:uppercase;}
+.portfolio-item h3 {margin:-10px 0 10px; font-size:1em; text-transform:uppercase;}
 
 .tpl6 h3
 {
