--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -5,6 +5,8 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+{% include gallery.html %}
+
 {% include ga.html %}
 
 {% include navbar.html %}
