--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -7,7 +7,7 @@
     <h3 class="title"></h3>
     <a class="prev">‹</a>
     <a class="next">›</a>
-    <a class="close">×</a>
+    <a class="close">x</a>
     <a class="play-pause"></a>
     <ol class="indicator"></ol>
     <!-- The modal dialog, which will be used to wrap the lightbox content -->
