--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -19,7 +19,7 @@
 								<div class="bg a0" data-animate="fadeIn">
 									<div class="carouselitem">
 										<h3 data-animate="fadeInDown">{{ s.title }}</h3>
-										<a href="{{ "/img/carousel/" | prepend: site.baseurl }}{{ s.img }}" title="{{ s.title }}" class="dmbutton a2" data-animate="fadeInUp" data-gallery><i class="fa fa-search"></i></a>
+										<a href="{{ "/img/carousel/" | prepend: site.baseurl }}{{ s.img }}" title="{{ s.title }}" class="dmbutton a2" data-animate="fadeInUp" data-gallery rel="prettyPhoto" rel="nofollow"><i class="fa fa-search"></i></a>
 										<a href="{{  project.url | prepend: site.baseurl }}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-link"></i></a>
 									</div>
 								</div>
