--- a/_includes/scripts2.html
+++ b/_includes/scripts2.html
@@ -41,6 +41,12 @@
 </script>
 {% endif %}
 <script>
+$(document).delegate('*[data-toggle="lightbox"]', 'click', function(event) {
+    event.preventDefault();
+    $(this).ekkoLightbox();
+}); 
+</script>
+<script>
 // Carousel
 (function($) {
 	"use strict";
