--- a/_includes/scripts2.html
+++ b/_includes/scripts2.html
@@ -106,11 +106,24 @@
 					width : itemWidth + 'px' 
 				});
 			});
+			
+			function setHeights() {
+				var h = 0;
+				$container.find('.portfolio').each(function() { 
+					var b = $(this);
+					if (h < b.height()) h = b.height();
+				});
+				$container.find('.portfolio').each(function() { 
+					$(this).css( { 
+					height : h + 'px' 
+			});
+		});
 		}
 		
 		function setPortfolio() { 
 			setColumns();
 			$container.isotope('reLayout');
+			setHeights();
 		}
 			
 		$container.imagesLoaded(function () { 
