--- a/_includes/scripts2.html
+++ b/_includes/scripts2.html
@@ -109,7 +109,7 @@
 			
 			function setHeights() {
 				var h = 400;
-				$container.find('.portfolio').each(function() { 
+				$container.find('#portfoliowrap').each(function() { 
 					$(this).css( { 
 					height : h + 'px' 
 			});
