--- a/_includes/scripts2.html
+++ b/_includes/scripts2.html
@@ -106,11 +106,20 @@
 					width : itemWidth + 'px' 
 				});
 			});
+			
+			function setHeights() {
+				var h = 400;
+				$container.find('.portfoliowrap').each(function() { 
+					$(this).css( { 
+					height : h + 'px' 
+			});
+		});
 		}
 		
 		function setPortfolio() { 
 			setColumns();
 			$container.isotope('reLayout');
+			setHeights();
 		}
 			
 		$container.imagesLoaded(function () { 
