--- a/_includes/scripts2.html
+++ b/_includes/scripts2.html
@@ -128,6 +128,8 @@
 			animation: 'fade', autoplay: true, arrows: false 
 		});
 		
+		$('.my-slider').height('initial');
+		
 		data = slider.data('unslider');
 		
 		$(".portfolio-item").on({
