--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
 
 {% include header.html %}
 
+{% include carousel.html %}
+
 {% include publications_featured.html %}
 
 {% include publications_additional.html %}
