--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,9 +17,131 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/jquery.spin.min.js"></script>
 
-
 <!-- Scrolling Nav JavaScript -->
 <script src="{{ "/js/scrolling-nav.js" | prepend: site.baseurl }}"></script>
+
+<!-- More Stuf... -->
+<script src="{{ "/js/retina-1.1.0.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/jquery.hoverdir.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/jquery.hoverex.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/jquery.prettyPhoto.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/jquery.isotope.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/custom.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/unslider-min.js" | prepend: site.baseurl }}"></script>
+{% if site.analytics %}
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', '{{ site.analytics }}', 'auto');
+  ga('send', 'pageview');
+
+</script>
+{% endif %}
+<script>
+// Carousel
+(function($) {
+	"use strict";
+	var $container = $('.portfolio'),
+		$items = $container.find('.portfolio-item'),
+		portfolioLayout = 'fitRows';
+		
+		if( $container.hasClass('portfolio-centered') ) {
+			portfolioLayout = 'masonry';
+		}
+				
+		$container.isotope({
+			filter: '*',
+			animationEngine: 'best-available',
+			layoutMode: portfolioLayout,
+			animationOptions: {
+			duration: 750,
+			easing: 'linear',
+			queue: false
+		},
+		masonry: {
+		}
+		}, refreshWaypoints());
+		
+		function refreshWaypoints() {
+			setTimeout(function() {
+			}, 1000);   
+		}
+				
+		$('nav.portfolio-filter ul a').on('click', function() {
+				var selector = $(this).attr('data-filter');
+				$container.isotope({ filter: selector }, refreshWaypoints());
+				$('nav.portfolio-filter ul a').removeClass('active');
+				$(this).addClass('active');
+				return false;
+		});
+		
+		function getColumnNumber() { 
+			var divWidth = $(carousellist).width(), 
+			columnNumber = 1;
+		
+			if (divWidth > 800) {
+				columnNumber = 5;
+			} else if (divWidth > 600) {
+				columnNumber = 4;
+			} else if (divWidth > 400) {
+				columnNumber = 3;
+			} else if (divWidth > 200) {
+				columnNumber = 2;
+			} else if (divWidth > 100) {
+				columnNumber = 1;
+			}
+				return columnNumber;
+			}       
+			
+			function setColumns() {
+				var divWidth = $(carousellist).width(), 
+				columnNumber = getColumnNumber(), 
+				itemWidth = Math.floor(divWidth / columnNumber);
+				
+				$container.find('.portfolio-item').each(function() { 
+					$(this).css( { 
+					width : itemWidth + 'px' 
+				});
+			});
+		}
+		
+		function setPortfolio() { 
+			setColumns();
+			$container.isotope('reLayout');
+		}
+			
+		$container.imagesLoaded(function () { 
+			setPortfolio();
+		});
+		
+		$(carousellist).on('resize', function () { 
+		setPortfolio();          
+	});
+})(jQuery);
+</script>
+<script>
+	jQuery(document).ready(function($) {
+		var slider = $('.my-slider').unslider({
+			animation: 'fade', autoplay: true, arrows: false 
+		});
+		
+		$('.my-slider').height('initial');
+		
+		data = slider.data('unslider');
+		
+		$(".portfolio-item").on({
+			mouseenter: function () {
+				data.stop();
+			},
+			mouseleave: function () {
+				data.start();
+			}
+		});
+	});
+</script>
 
 <script>
 
