--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="page-header">Talks</h2>
+        <h2 class="page-header">Talks and Presentations</h2>
       </div>
     </div>
 	{% assign curDate = site.time | date: '%s' %}
