--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
 
     <div class="row">
       <div class="col-md-8 col-md-offset-2 text-center">
-        <h1>{{ site.author }}</h1>
+        <h1>{{ site.authortitle }} {{ site.author }}</h1>
         <hr class="small">
         <p class="lead">{{ site.subheading }}</p>
       </div>
