--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -12,6 +12,8 @@
 {% include header.html %}
 
 {% include carousel.html %}
+  
+{% include publications_thesis.html %}
 
 {% include publications_featured.html %}
 
