--- a/_includes/publications_featured.html
+++ b/_includes/publications_featured.html
@@ -10,7 +10,7 @@
     </div>
     {% assign publications = site.data.publications | sort:"date" %}
     {% for p in publications reversed %}
-	{% if p.featured == "true" %}
+	{% if p.featured == "true" and not p.thesis %}
     <div class="row{% if p != publications.first %} not-last{% endif %}">
       <div class="col-sm-3">
         {% include thumbnail.html %}
