--- a/_includes/news.html
+++ b/_includes/news.html
@@ -20,7 +20,7 @@
         <h4>{{ n.text}}</h4>
       </div>
       <div class="col-md-1 text-left">
-        <h4><img src='{{ n.icon}}'></h4>
+        <h4>{{ n.icon}}</h4>
       </div>
     </div>
     {% endfor %}
