--- a/_includes/publications_featured.html
+++ b/_includes/publications_featured.html
@@ -33,6 +33,7 @@
           <pre id="bibtex-data-{{ p.key }}">{% include /bib/{{ p.bibtex }} %}</pre>
         </div>
       </div>
+      {% endif %}
     </div>
       {% endif %}
       {% endfor %}
