--- a/_includes/publications_featured.html
+++ b/_includes/publications_featured.html
@@ -18,11 +18,18 @@
       <div class="col-sm-9">
         <h4>{{ p.title }}</h4>
         <p>{% for author in p.authors %}{% if author == p.authors.last %}and {% endif %}{{ author }}{% if p.authors.size > 2 and author != p.authors.last %},{% endif %} {% endfor %}<br><span class="text-danger">{{ p.published }} {{ p.date | date: '%Y' }}</span></p>
-        <p>{{ p.caption }}</p>
         <p>
+	  {% if p.caption %}<a data-toggle="collapse" href="#abstract-{{ p.key }}">Abstract</a>{% if p.bibtex or p.downloads %}, {% endif %}{% endif %}
           {% if p.bibtex %}<a data-toggle="collapse" href="#bibtex-{{ p.key }}">BibTeX</a>{% if p.downloads %}, {% endif %}{% endif %}
           {% if p.downloads %}{% for download in p.downloads %}<a {% if download.video %}class="video-{{ download.video }}" {% endif %}href="{{ download.href }}" target="_blank">{{ download.desc }}</a>{% if download != p.downloads.last %}, {% endif %}{% endfor %}{% endif %}
         </p>
+      {% if p.caption %}
+      <div class="collapse abstract" id="abstract-{{ p.key }}">
+        <div class="card card-block">
+          <pre id="abstract-data-{{ p.key }}">{% include {{ p.caption }} %}</pre>
+        </div>
+      </div>
+      {% endif %}
       {% if p.bibtex %}
       <div class="collapse bibtex" id="bibtex-{{ p.key }}">
         <div class="btn-clipboard-parent">
