--- a/_includes/publications_featured.html
+++ b/_includes/publications_featured.html
@@ -25,7 +25,7 @@
         </p>
       {% if p.caption %}
       <div class="collapse bibtex" id="abstract-{{ p.key }}">
-          <pre id="abstract-data-{{ p.key }}">{{ p.caption }}</pre>
+          <p>{{ p.caption }}</p>
       </div>
       {% endif %}
       {% if p.bibtex %}
