--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -20,7 +20,7 @@
               <li>
                 <h4>{{ c.course }}</h4>
                 <span class="text-danger">{{ c.type }}</span>, {{ c.role }}
-              </li>{% endfor %}
+              </li><br/>{% endfor %}
             </ul>
           </div>
         </div>
