--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
 {% include carousel.html %}
   
 {% include news.html %}
+  
+{% include artworks.html %}
 
 {% include publications_featured.html %}
 
